crates/inertia-embed/tests/ui/fail/missing_manifest.stderr
error: Vite manifest `../../../../crates/inertia-embed/tests/fixtures/valid/dist/.vite/missing.json` is unavailable: No such file or directory (os error 2)
 --> tests/ui/fail/missing_manifest.rs:6:19
  |
6 |         manifest: "../../../../crates/inertia-embed/tests/fixtures/valid/dist/.vite/missing.json",
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
